# opsdiag

./: .gitignore  11.zh.md  README.md  dialog_view.html  jiexi.html  opsdiag_a.txt  package-lock.json  pyproject.toml  修改问题反馈记录.md
configs/: derisk-conversation-mode.toml  derisk-graphrag.toml  derisk-local-glm.toml  derisk-local-qwen.toml  derisk-local-vllm.toml  derisk-mysql-mcp.toml  derisk-proxy-claude.toml  derisk-proxy-deepseek.toml  derisk-proxy-gemini.toml  derisk-proxy-openai.toml  derisk-proxy-tongyi.toml  derisk-siliconflow.toml  disable_cache_config.py  opsdiag-conversation-mode.toml  opsdiag-graphrag.toml  opsdiag-local-glm.toml  opsdiag-local-qwen.toml  opsdiag-local-vllm.toml  opsdiag-mysql-mcp.toml  opsdiag-proxy-aliyun.toml  opsdiag-proxy-claude.toml  opsdiag-proxy-deepseek.toml  opsdiag-proxy-gemini.toml  opsdiag-proxy-openai.toml  opsdiag-proxy-tongyi.toml  opsdiag-siliconflow.toml
pilot/meta_data/: alembic.ini  derisk.db
pilot/meta_data/alembic/: env.py
pilot/meta_data/alembic/versions/: 0a5bb1019828_new_migration.py  0bdbe13c809a_new_migration.py  0d3700f9dc02_new_migration.py  127956df0b5a_new_migration.py  141b88653c92_new_migration.py  2762dd8042ae_new_migration.py  298c28b61a54_new_migration.py  29c4e824571f_new_migration.py  34af3fe9a4fb_new_migration.py  35301130610d_new_migration.py  3d50c1ece9c4_new_migration.py  3d5c66c3b5e8_new_migration.py  4707e2a8e120_new_migration.py  47469c64b478_new_migration.py  4b20d1441248_new_migration.py  (+59 more)
scripts/: apply_no_cache_config.bat  clean_dataexpert_config.py  clean_dataexpert_manual.sql  clean_specific_config.py  clear_all_cache.bat  clear_cache.bat  clear_cache.py  clear_cache.sh  fix_mysql_mcp_install.py  optimize_agent_config.py  remove_flamegraph_from_db.py  setup_mysql_mcp.py  start_conversation_mode.bat  start_conversation_mode.sh
web/: .env.local  next.config.ts  package-lock.json  package.json
web/src/app/: i18n.ts  layout.tsx
web/src/contexts/: chat-content-context.tsx
web/src/types/: chat.ts  prompt.ts
web/src/utils/: index.ts
(+28 files in other folders)
